--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --force",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
